# StreamDiffusion-Community

./: .gitignore  AGENTS.md  Dockerfile  README-ja.md  README-ko.md  README.md  pyproject.toml
.agents/skills/brainstorming/: SKILL.md
.agents/skills/ci-failure-triage/: SKILL.md  failure-triage-template.md  root-cause-log-template.md
.agents/skills/ci-workflow-change/: SKILL.md  permissions-and-secrets-checklist.md  workflow-change-checklist.md
.agents/skills/docs-consistency/: SKILL.md  docs-sync-checklist.md  platform-compatibility-checklist.md
.agents/skills/executing-plans/: SKILL.md
.agents/skills/finishing-a-development-branch/: SKILL.md
.agents/skills/fork-pr-handoff/: SKILL.md  pr-description-template.md  review-response-template.md
.agents/skills/openspec-autopilot/: SKILL.md
.agents/skills/openspec-workflow/: SKILL.md
.agents/skills/python-change-safety/: SKILL.md  change-impact-checklist.md  verification-checklist.md
.agents/skills/release-readiness/: SKILL.md  publish-risk-checklist.md  release-checklist.md
.agents/skills/requesting-code-review/: SKILL.md
.agents/skills/resolving-reported-issues/: SKILL.md
.agents/skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
.agents/skills/using-git-worktrees/: SKILL.md
docs/: openspec-workflow.md
openspec/changes/adopt-uv-core-workflow/: tasks.md
openspec/changes/adopt-uv-core-workflow/specs/uv-managed-core-repository/: spec.md
openspec/changes/archive/2026-03-14-clarify-openspec-collaboration-flow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-14-clarify-openspec-collaboration-flow/specs/openspec-collaboration-flow/: spec.md
openspec/changes/archive/2026-03-14-refresh-dependency-baselines/: design.md
openspec/changes/archive/2026-03-14-refresh-dependency-baselines/specs/uv-managed-core-repository/: spec.md
openspec/changes/archive/2026-03-15-adopt-uv-core-workflow/: design.md  proposal.md
openspec/changes/refresh-dependency-baselines/: proposal.md  tasks.md
openspec/specs/openspec-collaboration-flow/: spec.md
openspec/specs/uv-managed-core-repository/: spec.md
src/streamdiffusion/: __init__.py  compat.py  diffusers_compat.py
src/streamdiffusion/acceleration/tensorrt/: engine.py
tests/: test_diffusers_compat.py  test_package_import.py  test_project_metadata.py  test_transformers_compat.py
utils/: wrapper.py
